Website UI updated. Data package refactored along with major changes in data structure. Introduced dynamic imports. A config is now avalaible.
